# gameboy-rust

./: .gitignore  Cargo.toml  README.md
docs/: audio-worklet.js  index.html  style.css
docs/pkg/: gameboy_web.d.ts  gameboy_web.js  gameboy_web_bg.wasm  gameboy_web_bg.wasm.d.ts  package.json
gameboy-core/: Cargo.toml
gameboy-core/src/: emulator.rs  lib.rs
gameboy-core/src/apu/: channel3.rs  channel4.rs
gameboy-core/src/cartridge/: mbc.rs  mod.rs
gameboy-core/src/cpu/: mod.rs
gameboy-core/src/interrupts/: mod.rs
gameboy-core/src/joypad/: mod.rs
gameboy-core/src/mmu/: mod.rs
gameboy-core/src/ppu/: mod.rs
gameboy-core/src/timer/: mod.rs
gameboy-desktop/: Cargo.toml
gameboy-desktop/src/: main.rs
gameboy-web/: Cargo.toml
gameboy-web/src/: lib.rs
gameboy-web/static/: main.js
src/: emulator.rs  main.rs
src/apu/: channel1.rs  channel2.rs  mod.rs
src/cartridge/: mbc.rs  mod.rs
src/cpu/: instructions.rs  registers.rs
src/mmu/: bus.rs
src/ppu/: mod.rs
