[package]
name = "gameboy-web"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
gameboy-core = { path = "../gameboy-core" }
wasm-bindgen = "0.2"
js-sys = "0.3"
log = "0.4.29"
wasm-logger = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
    "KeyboardEvent",
    "EventTarget",
    "Performance",
    "console",
]
